<resources>
    <string name="app_name">Versatto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome_back">Bem-vindo de volta!</string>
    <string name="login_to_continue">Faça login para continuar</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="login">Login</string>
    <string name="no_account_sign_up">Não tem uma conta? Cadastre-se</string>
    <string name="logo_image_description">Logo</string>
    <string name="versatto_v">V</string>
    <string name="versatto_title">VERSATTO</string>
    <string name="versatto_subtitle">BELEZA SEM LIMITES</string>
    <string name="password_reset_title">REDEFINIÇÃO
DE SENHA</string>
    <string name="email_hint">E-MAIL</string>
    <string name="password_hint">SENHA</string>
    <string name="confirm_password_hint">CONFIRMAR SENHA</string>
    <string name="reset_password_button">REDEFINIR SENHA</string>
    <string name="create_account_title">Criar Conta</string>
    <string name="name_hint">Nome</string>
    <string name="register_button">CADASTRAR</string>
    <string name="user_hint">Usuário</string>
    <string name="enter_button">Entrar</string>
    <string name="recover_password_button">Recuperar Senha</string>
    <string name="create_account_button">Criar Conta</string>
    <string name="logout_button">Sair</string>
    <string name="feed_image_description">Imagem do feed</string>
    <string name="schedules_for_date">Agendamentos para: %s</string>
</resources>